swagger paciente
